@@ -316,7 +316,7 @@
 			<dependency>
 				<groupId>org.influxdb</groupId>
 				<artifactId>influxdb-java</artifactId>
-				<version>2.2</version>
+				<version>2.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jhades</groupId>
@@ -507,34 +507,6 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.kaching.platform</groupId>
-				<artifactId>kawala-testing</artifactId>
-				<version>0.1.6</version>
-				<scope>test</scope>
-				<exclusions>
-					<exclusion>
-						<groupId>jdepend</groupId>
-						<artifactId>jdepend</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jmock</groupId>
-						<artifactId>jmock</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jmock</groupId>
-						<artifactId>jmock-junit4</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.jmock</groupId>
-						<artifactId>jmock-legacy</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>asm</groupId>
-						<artifactId>asm-all</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.12</version>
@@ -619,11 +591,6 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.kaching.platform</groupId>
-			<artifactId>kawala-testing</artifactId>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -983,7 +950,6 @@
 							<include>**/*TestCase.java</include>
 							<include>**/*Tests.java</include>
 						</includes>
-						<argLine>-Djava.security.manager=com.kaching.platform.testing.LessIOSecurityManager</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
